--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Links</h1>
-    <h2>Codeclub Projects</h2>
+    <h2>Codeclub Projects (Get started here)</h2>
     <a href="https://projects.raspberrypi.org/en/codeclub/scratch-module-1">Scratch 1</a>
     <a href="https://projects.raspberrypi.org/en/codeclub/scratch-module-2">Scratch 2</a>
     <a href="https://projects.raspberrypi.org/en/codeclub/scratch-module-3">Scratch 3</a>
@@ -18,7 +18,7 @@
     <a href="https://projects.raspberrypi.org/en/codeclub">All Codeclub Projects</a>
 
     <h2>Other Recommended Tutorials (Advanced)</h2>
-    <a href="https://www.youtube.com/playlist?list=PLhyKYa0YJ_5C6QC36h5eApOyXtx98ehGi"></a>
+    <a href="https://www.youtube.com/playlist?list=PLhyKYa0YJ_5C6QC36h5eApOyXtx98ehGi">Making your first Game</a>
     <a href="https://www.youtube.com/playlist?list=PLyhkEEoUjSQtUiSOu-N4BIrHBFtLNjkyE">Making a platformer in Pico8</a>
     <a href="http://osmstudios.com/tutorials/love2d-platformer-tutorial-part-1-the-basics"> Making a platformer in Love2d</a>
   </body>
