--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
     <title>Links</title>
-    <link rel="stylesheet" href="style2.css"/>
+    <style>
+      a{
+        display:block;
+      }
+    </style>
   </head>
   <body>
     <h1>Links</h1>
