--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
   <head>
     <title>Links</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       a{
         display:block;
+      }
+      body{
+        padding:0em 1em;
+        margin:auto;
+        max-width:36em;
+        background-color: white;
+        height:100%;
+      }
+      html{
+        background-color: #C45A92;
       }
     </style>
   </head>
@@ -21,7 +32,7 @@
     <a href="https://projects.raspberrypi.org/en/codeclub/python-additional-projects">Python Extra</a>
     <a href="https://projects.raspberrypi.org/en/codeclub">All Codeclub Projects</a>
 
-    <h2>Other Tutorials (Advanced)</h2>
+    <h2>Other Recommended Tutorials (Advanced)</h2>
     <a href="https://www.youtube.com/playlist?list=PLhyKYa0YJ_5C6QC36h5eApOyXtx98ehGi">Making your first Game</a>
     <a href="https://www.youtube.com/playlist?list=PLyhkEEoUjSQtUiSOu-N4BIrHBFtLNjkyE">Making a platformer in Pico8</a>
     <a href="http://osmstudios.com/tutorials/love2d-platformer-tutorial-part-1-the-basics"> Making a platformer in Love2d</a>
