--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <h2>Other Recommended Tutorials (Advanced)</h2>
     <a href="https://www.youtube.com/playlist?list=PLhyKYa0YJ_5C6QC36h5eApOyXtx98ehGi">Making your first Game</a>
     <a href="https://www.youtube.com/playlist?list=PLyhkEEoUjSQtUiSOu-N4BIrHBFtLNjkyE">Making a platformer in Pico8</a>
-    <a href="http://osmstudios.com/tutorials/love2d-platformer-tutorial-part-1-the-basics"> Making a platformer in Love2d</a>
+    <a href="http://osmstudios.com/tutorials/love2d-platformer-tutorial-part-1-the-basics">Making a platformer in Love2d</a>
+    <a href="https://raytracing.github.io/books/RayTracingInOneWeekend.html">Learn how to make a Ray Tracing Engine</a>
+    
   </body>
 </html>
